# bitshares-core

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile1  dev.json  sonar-project.properties
.github/workflows/: build-and-test.linux-release.yml  build-and-test.mac.yml  build-and-test.ubuntu-debug.yml  build-and-test.ubuntu-release.yml  build-and-test.win.yml  build-docker.yml
docker/: bitsharesentry.sh
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  database_api_impl.hxx  impacted.cpp
libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  asset_evaluator.cpp  asset_object.cpp  committee_member_evaluator.cpp  db_balance.cpp  db_block.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_notify.cpp  db_update.cpp  dividend_operation_evaluator.cpp  equal_operation.cpp  equal_operation_evaluator.cpp  evaluator.cpp  fork_database.cpp  liquidity_pool_evaluator.cpp  market_evaluator.cpp  proposal_evaluator.cpp  samet_fund_evaluator.cpp  small_objects.cpp  transfer_evaluator.cpp
libraries/db/: undo_database.cpp
libraries/egenesis/: CMakeLists.txt
libraries/net/: node.cpp  node_impl.hxx
libraries/plugins/: CMakeLists.txt
libraries/plugins/market_snapshot/: CMakeLists.txt  market_snapshot_plugin.cpp
libraries/plugins/market_snapshot/include/graphene/market_snapshot/: market_snapshot_plugin.hpp
libraries/protocol/: asset.cpp
libraries/utilities/: elasticsearch.cpp
libraries/wallet/: CMakeLists.txt  wallet.cpp  wallet_committee.cpp  wallet_voting.cpp
tests/: run-parallel-tests.sh
(+58 files in other folders)
